# CalScan

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
calscan/: __init__.py  cli.py  ics_generator.py  parser.py  usage.py  vision.py
